gae-studio/gae-studio-server/src/main/java/com/arcbees/gaestudio/server/util/GQLParser.java
/**
 * Copyright 2015 ArcBees Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not
 * use this file except in compliance with the License. You may obtain a copy of
 * the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations under
 * the License.
 */

//CHECKSTYLE_OFF
// $ANTLR 3.4 GQL.g 2014-07-02 15:17:15

package com.arcbees.gaestudio.server.util;

// to prevent BitSet to be ambigious

import java.util.LinkedList;
import java.util.List;

import org.antlr.runtime.BitSet;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.TreeAdaptor;

import com.arcbees.gaestudio.server.util.GqlQuery.BooleanEvaluator;
import com.arcbees.gaestudio.server.util.GqlQuery.Condition;
import com.arcbees.gaestudio.server.util.GqlQuery.DecimalEvaluator;
import com.arcbees.gaestudio.server.util.GqlQuery.Evaluator;
import com.arcbees.gaestudio.server.util.GqlQuery.From;
import com.arcbees.gaestudio.server.util.GqlQuery.FunctionEvaluator;
import com.arcbees.gaestudio.server.util.GqlQuery.Limit;
import com.arcbees.gaestudio.server.util.GqlQuery.ListEvaluator;
import com.arcbees.gaestudio.server.util.GqlQuery.NullEvaluator;
import com.arcbees.gaestudio.server.util.GqlQuery.Offset;
import com.arcbees.gaestudio.server.util.GqlQuery.OrderBy;
import com.arcbees.gaestudio.server.util.GqlQuery.OrderByItem;
import com.arcbees.gaestudio.server.util.GqlQuery.ParamEvaluator;
import com.arcbees.gaestudio.server.util.GqlQuery.ParseResult;
import com.arcbees.gaestudio.server.util.GqlQuery.Select;
import com.arcbees.gaestudio.server.util.GqlQuery.StringEvaluator;
import com.arcbees.gaestudio.server.util.GqlQuery.Where;
import com.google.appengine.api.datastore.Query.FilterOperator;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class GQLParser extends Parser {
    public static final String[] tokenNames = new String[]{
            "<invalid>", "<EOR>", "<DOWN>", "<UP>", "A", "ANCESTOR", "AND", "ASC", "B", "BOOLEAN", "BY", "C",
            "COMMENT", "D", "DECIMAL", "DESC", "DIGIT", "DOT", "E", "F", "FROM", "FUNCTION", "G", "H", "I",
            "IDENTITY", "IN", "IS", "J", "K", "L", "LETTER", "LIMIT", "M", "MULTILINE_COMMENT", "N", "NULL", "O",
            "OFFSET", "ORDER", "P", "Q", "R", "S", "SELECT", "STRING_LITERAL", "T", "U", "V", "W", "WHERE",
            "WHITESPACE", "X", "Y", "Z", "'!='", "'('", "')'", "'*'", "','", "':'", "'<'", "'<='", "'='", "'>'",
            "'>='", "'__key__'"
    };

    public static final int EOF = -1;
    public static final int T__55 = 55;
    public static final int T__56 = 56;
    public static final int T__57 = 57;
    public static final int T__58 = 58;
    public static final int T__59 = 59;
    public static final int T__60 = 60;
    public static final int T__61 = 61;
    public static final int T__62 = 62;
    public static final int T__63 = 63;
    public static final int T__64 = 64;
    public static final int T__65 = 65;
    public static final int T__66 = 66;
    public static final int A = 4;
    public static final int ANCESTOR = 5;
    public static final int AND = 6;
    public static final int ASC = 7;
    public static final int B = 8;
    public static final int BOOLEAN = 9;
    public static final int BY = 10;
    public static final int C = 11;
    public static final int COMMENT = 12;
    public static final int D = 13;
    public static final int DECIMAL = 14;
    public static final int DESC = 15;
    public static final int DIGIT = 16;
    public static final int DOT = 17;
    public static final int E = 18;
    public static final int F = 19;
    public static final int FROM = 20;
    public static final int FUNCTION = 21;
    public static final int G = 22;
    public static final int H = 23;
    public static final int I = 24;
    public static final int IDENTITY = 25;
    public static final int IN = 26;
    public static final int IS = 27;
    public static final int J = 28;
    public static final int K = 29;
    public static final int L = 30;
    public static final int LETTER = 31;
    public static final int LIMIT = 32;
    public static final int M = 33;
    public static final int MULTILINE_COMMENT = 34;
    public static final int N = 35;
    public static final int NULL = 36;
    public static final int O = 37;
    public static final int OFFSET = 38;
    public static final int ORDER = 39;
    public static final int P = 40;
    public static final int Q = 41;
    public static final int R = 42;
    public static final int S = 43;
    public static final int SELECT = 44;
    public static final int STRING_LITERAL = 45;
    public static final int T = 46;
    public static final int U = 47;
    public static final int V = 48;
    public static final int W = 49;
    public static final int WHERE = 50;
    public static final int WHITESPACE = 51;
    public static final int X = 52;
    public static final int Y = 53;
    public static final int Z = 54;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[]{};
    }

    // delegators

    public GQLParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }

    public GQLParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }

    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() {
        return GQLParser.tokenNames;
    }

    public String getGrammarFileName() {
        return "GQL.g";
    }

    public static class query_return extends ParserRuleReturnScope {
        public ParseResult r;
        Object tree;

        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start "query"
    // GQL.g:35:1: query returns [ParseResult r] : select_clause ( from_clause )? ( where_clause )? ( orderby_clause
    // )? ( limit_clause )? ( offset_clause )? ;
    public final GQLParser.query_return query() throws RecognitionException {
        GQLParser.query_return retval = new GQLParser.query_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        GQLParser.select_clause_return select_clause1 = null;

        GQLParser.from_clause_return from_clause2 = null;

        GQLParser.where_clause_return where_clause3 = null;

        GQLParser.orderby_clause_return orderby_clause4 = null;

        GQLParser.limit_clause_return limit_clause5 = null;

        GQLParser.offset_clause_return offset_clause6 = null;

        try {
            // GQL.g:35:30: ( select_clause ( from_clause )? ( where_clause )? ( orderby_clause )? ( limit_clause )?
            // ( offset_clause )? )
            // GQL.g:36:3: select_clause ( from_clause )? ( where_clause )? ( orderby_clause )? ( limit_clause )? (
            // offset_clause )?
            {
                root_0 = (Object) adaptor.nil();

                retval.r = new ParseResult();

                pushFollow(FOLLOW_select_clause_in_query57);
                select_clause1 = select_clause();

                state._fsp--;

                adaptor.addChild(root_0, select_clause1.getTree());

                retval.r.setSelect((select_clause1 != null ? select_clause1.r : null));

                // GQL.g:38:3: ( from_clause )?
                int alt1 = 2;
                int LA1_0 = input.LA(1);

                if ((LA1_0 == FROM)) {
                    alt1 = 1;
                }
                switch (alt1) {
                    case 1:
                        // GQL.g:38:4: from_clause
                    {
                        pushFollow(FOLLOW_from_clause_in_query64);
                        from_clause2 = from_clause();

                        state._fsp--;

                        adaptor.addChild(root_0, from_clause2.getTree());

                        retval.r.setFrom((from_clause2 != null ? from_clause2.r : null));
                    }
                    break;
                }

                // GQL.g:39:3: ( where_clause )?
                int alt2 = 2;
                int LA2_0 = input.LA(1);

                if ((LA2_0 == WHERE)) {
                    alt2 = 1;
                }
                switch (alt2) {
                    case 1:
                        // GQL.g:39:4: where_clause
                    {
                        pushFollow(FOLLOW_where_clause_in_query74);
                        where_clause3 = where_clause();

                        state._fsp--;

                        adaptor.addChild(root_0, where_clause3.getTree());

                        retval.r.setWhere((where_clause3 != null ? where_clause3.r : null));
                    }
                    break;
                }

                // GQL.g:40:3: ( orderby_clause )?
                int alt3 = 2;
                int LA3_0 = input.LA(1);

                if ((LA3_0 == ORDER)) {
                    alt3 = 1;
                }
                switch (alt3) {
                    case 1:
                        // GQL.g:40:4: orderby_clause
                    {
                        pushFollow(FOLLOW_orderby_clause_in_query84);
                        orderby_clause4 = orderby_clause();

                        state._fsp--;

                        adaptor.addChild(root_0, orderby_clause4.getTree());

                        retval.r.setOrderBy((orderby_clause4 != null ? orderby_clause4.r : null));
                    }
                    break;
                }

                // GQL.g:41:3: ( limit_clause )?
                int alt4 = 2;
                int LA4_0 = input.LA(1);

                if ((LA4_0 == LIMIT)) {
                    alt4 = 1;
                }
                switch (alt4) {
                    case 1:
                        // GQL.g:41:4: limit_clause
                    {
                        pushFollow(FOLLOW_limit_clause_in_query93);
                        limit_clause5 = limit_clause();

                        state._fsp--;

                        adaptor.addChild(root_0, limit_clause5.getTree());

                        retval.r.setLimit((limit_clause5 != null ? limit_clause5.r : null));
                    }
                    break;
                }

                // GQL.g:42:3: ( offset_clause )?
                int alt5 = 2;
                int LA5_0 = input.LA(1);

                if ((LA5_0 == OFFSET)) {
                    alt5 = 1;
                }
                switch (alt5) {
                    case 1:
                        // GQL.g:42:4: offset_clause
                    {
                        pushFollow(FOLLOW_offset_clause_in_query102);
                        offset_clause6 = offset_clause();

                        state._fsp--;

                        adaptor.addChild(root_0, offset_clause6.getTree());

                        retval.r.setOffset((offset_clause6 != null ? offset_clause6.r : null));
                    }
                    break;
                }
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
        } finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "query"

    public static class select_clause_return extends ParserRuleReturnScope {
        public Select r;
        Object tree;

        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start "select_clause"
    // GQL.g:45:1: select_clause returns [Select r] : SELECT ( '*' | '__key__' | (i1= IDENTITY ) ( ',' i2= IDENTITY )
    // * ) ;
    public final GQLParser.select_clause_return select_clause() throws RecognitionException {
        GQLParser.select_clause_return retval = new GQLParser.select_clause_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token i1 = null;
        Token i2 = null;
        Token SELECT7 = null;
        Token char_literal8 = null;
        Token string_literal9 = null;
        Token char_literal10 = null;

        Object i1_tree = null;
        Object i2_tree = null;
        Object SELECT7_tree = null;
        Object char_literal8_tree = null;
        Object string_literal9_tree = null;
        Object char_literal10_tree = null;

        try {
            // GQL.g:45:33: ( SELECT ( '*' | '__key__' | (i1= IDENTITY ) ( ',' i2= IDENTITY )* ) )
            // GQL.g:46:3: SELECT ( '*' | '__key__' | (i1= IDENTITY ) ( ',' i2= IDENTITY )* )
            {
                root_0 = (Object) adaptor.nil();

                SELECT7 = (Token) match(input, SELECT, FOLLOW_SELECT_in_select_clause122);
                SELECT7_tree =
                        (Object) adaptor.create(SELECT7)
                ;
                adaptor.addChild(root_0, SELECT7_tree);

                // GQL.g:47:3: ( '*' | '__key__' | (i1= IDENTITY ) ( ',' i2= IDENTITY )* )
                int alt7 = 3;
                switch (input.LA(1)) {
                    case 58: {
                        alt7 = 1;
                    }
                    break;
                    case 66: {
                        alt7 = 2;
                    }
                    break;
                    case IDENTITY: {
                        alt7 = 3;
                    }
                    break;
                    default:
                        NoViableAltException nvae =
                                new NoViableAltException("", 7, 0, input);

                        throw nvae;
                }

                switch (alt7) {
                    case 1:
                        // GQL.g:47:4: '*'
                    {
                        char_literal8 = (Token) match(input, 58, FOLLOW_58_in_select_clause127);
                        char_literal8_tree =
                                (Object) adaptor.create(char_literal8)
                        ;
                        adaptor.addChild(root_0, char_literal8_tree);

                        retval.r = new Select(false);
                    }
                    break;
                    case 2:
                        // GQL.g:48:5: '__key__'
                    {
                        string_literal9 = (Token) match(input, 66, FOLLOW_66_in_select_clause135);
                        string_literal9_tree =
                                (Object) adaptor.create(string_literal9)
                        ;
                        adaptor.addChild(root_0, string_literal9_tree);

                        retval.r = new Select(true);
                    }
                    break;
                    case 3:
                        // GQL.g:49:5: (i1= IDENTITY ) ( ',' i2= IDENTITY )*
                    {
                        // GQL.g:49:5: (i1= IDENTITY )
                        // GQL.g:49:6: i1= IDENTITY
                        {
                            i1 = (Token) match(input, IDENTITY, FOLLOW_IDENTITY_in_select_clause146);
                            i1_tree =
                                    (Object) adaptor.create(i1)
                            ;
                            adaptor.addChild(root_0, i1_tree);

                            retval.r = new Select(false);
                            retval.r.addProjection((i1 != null ? i1.getText() : null));
                        }

                        // GQL.g:49:75: ( ',' i2= IDENTITY )*
                        loop6:
                        do {
                            int alt6 = 2;
                            int LA6_0 = input.LA(1);

                            if ((LA6_0 == 59)) {
                                alt6 = 1;
                            }

                            switch (alt6) {
                                case 1:
                                    // GQL.g:49:76: ',' i2= IDENTITY
                                {
                                    char_literal10 = (Token) match(input, 59, FOLLOW_59_in_select_clause152);
                                    char_literal10_tree =
                                            (Object) adaptor.create(char_literal10)
                                    ;
                                    adaptor.addChild(root_0, char_literal10_tree);

                                    i2 = (Token) match(input, IDENTITY, FOLLOW_IDENTITY_in_select_clause156);
                                    i2_tree =
                                            (Object) adaptor.create(i2)
                                    ;
                                    adaptor.addChild(root_0, i2_tree);

                                    retval.r.addProjection((i2 != null ? i2.getText() : null));
                                }
                                break;

                                default:
                                    break loop6;
                            }
                        } while (true);
                    }
                    break;
                }
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
        } finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "select_clause"

    public static class from_clause_return extends ParserRuleReturnScope {
        public From r;
        Object tree;

        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start "from_clause"
    // GQL.g:55:1: from_clause returns [From r] : FROM IDENTITY ;
    public final GQLParser.from_clause_return from_clause() throws RecognitionException {
        GQLParser.from_clause_return retval = new GQLParser.from_clause_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token FROM11 = null;
        Token IDENTITY12 = null;

        Object FROM11_tree = null;
        Object IDENTITY12_tree = null;

        try {
            // GQL.g:55:29: ( FROM IDENTITY )
            // GQL.g:56:3: FROM IDENTITY
            {
                root_0 = (Object) adaptor.nil();

                FROM11 = (Token) match(input, FROM, FOLLOW_FROM_in_from_clause178);
                FROM11_tree =
                        (Object) adaptor.create(FROM11)
                ;
                adaptor.addChild(root_0, FROM11_tree);

                IDENTITY12 = (Token) match(input, IDENTITY, FOLLOW_IDENTITY_in_from_clause180);
                IDENTITY12_tree =
                        (Object) adaptor.create(IDENTITY12)
                ;
                adaptor.addChild(root_0, IDENTITY12_tree);

                retval.r = new From((IDENTITY12 != null ? IDENTITY12.getText() : null));
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
        } finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "from_clause"

    public static class where_clause_return extends ParserRuleReturnScope {
        public Where r;
        Object tree;

        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start "where_clause"
    // GQL.g:60:1: where_clause returns [Where r] : WHERE (c1= condition |a1= ancestorCondition ) ( AND (c2=
    // condition |a2= ancestorCondition ) )* ;
    public final GQLParser.where_clause_return where_clause() throws RecognitionException {
        GQLParser.where_clause_return retval = new GQLParser.where_clause_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token WHERE13 = null;
        Token AND14 = null;
        GQLParser.condition_return c1 = null;

        GQLParser.ancestorCondition_return a1 = null;

        GQLParser.condition_return c2 = null;

        GQLParser.ancestorCondition_return a2 = null;

        Object WHERE13_tree = null;
        Object AND14_tree = null;

        try {
            // GQL.g:60:31: ( WHERE (c1= condition |a1= ancestorCondition ) ( AND (c2= condition |a2=
            // ancestorCondition ) )* )
            // GQL.g:61:3: WHERE (c1= condition |a1= ancestorCondition ) ( AND (c2= condition |a2= ancestorCondition
            // ) )*
            {
                root_0 = (Object) adaptor.nil();

                retval.r = new Where();

                WHERE13 = (Token) match(input, WHERE, FOLLOW_WHERE_in_where_clause201);
                WHERE13_tree =
                        (Object) adaptor.create(WHERE13)
                ;
                adaptor.addChild(root_0, WHERE13_tree);

                // GQL.g:62:9: (c1= condition |a1= ancestorCondition )
                int alt8 = 2;
                int LA8_0 = input.LA(1);

                if ((LA8_0 == IDENTITY)) {
                    alt8 = 1;
                } else if ((LA8_0 == ANCESTOR)) {
                    alt8 = 2;
                } else {
                    NoViableAltException nvae =
                            new NoViableAltException("", 8, 0, input);

                    throw nvae;
                }
                switch (alt8) {
                    case 1:
                        // GQL.g:62:10: c1= condition
                    {
                        pushFollow(FOLLOW_condition_in_where_clause206);
                        c1 = condition();

                        state._fsp--;

                        adaptor.addChild(root_0, c1.getTree());

                        retval.r.withCondition(c1.r);
                    }
                    break;
                    case 2:
                        // GQL.g:62:51: a1= ancestorCondition
                    {
                        pushFollow(FOLLOW_ancestorCondition_in_where_clause214);
                        a1 = ancestorCondition();

                        state._fsp--;

                        adaptor.addChild(root_0, a1.getTree());

                        retval.r.withAncestor(a1.r);
                    }
                    break;
                }

                // GQL.g:63:5: ( AND (c2= condition |a2= ancestorCondition ) )*
                loop10:
                do {
                    int alt10 = 2;
                    int LA10_0 = input.LA(1);

                    if ((LA10_0 == AND)) {
                        alt10 = 1;
                    }

                    switch (alt10) {
                        case 1:
                            // GQL.g:63:6: AND (c2= condition |a2= ancestorCondition )
                        {
                            AND14 = (Token) match(input, AND, FOLLOW_AND_in_where_clause224);
                            AND14_tree =
                                    (Object) adaptor.create(AND14)
                            ;
                            adaptor.addChild(root_0, AND14_tree);

                            // GQL.g:63:10: (c2= condition |a2= ancestorCondition )
                            int alt9 = 2;
                            int LA9_0 = input.LA(1);

                            if ((LA9_0 == IDENTITY)) {
                                alt9 = 1;
                            } else if ((LA9_0 == ANCESTOR)) {
                                alt9 = 2;
                            } else {
                                NoViableAltException nvae =
                                        new NoViableAltException("", 9, 0, input);

                                throw nvae;
                            }
                            switch (alt9) {
                                case 1:
                                    // GQL.g:63:11: c2= condition
                                {
                                    pushFollow(FOLLOW_condition_in_where_clause229);
                                    c2 = condition();

                                    state._fsp--;

                                    adaptor.addChild(root_0, c2.getTree());

                                    retval.r.withCondition(c2.r);
                                }
                                break;
                                case 2:
                                    // GQL.g:63:52: a2= ancestorCondition
                                {
                                    pushFollow(FOLLOW_ancestorCondition_in_where_clause237);
                                    a2 = ancestorCondition();

                                    state._fsp--;

                                    adaptor.addChild(root_0, a2.getTree());

                                    retval.r.withAncestor(a2.r);
                                }
                                break;
                            }
                        }
                        break;

                        default:
                            break loop10;
                    }
                } while (true);
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
        } finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "where_clause"

    public static class orderby_clause_return extends ParserRuleReturnScope {
        public OrderBy r;
        Object tree;

        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start "orderby_clause"
    // GQL.g:67:1: orderby_clause returns [OrderBy r] : ORDER BY i1= IDENTITY ( ASC |d1= DESC )? ( ',' i2= IDENTITY (
    // ASC |d2= DESC )? )* ;
    public final GQLParser.orderby_clause_return orderby_clause() throws RecognitionException {
        GQLParser.orderby_clause_return retval = new GQLParser.orderby_clause_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token i1 = null;
        Token d1 = null;
        Token i2 = null;
        Token d2 = null;
        Token ORDER15 = null;
        Token BY16 = null;
        Token ASC17 = null;
        Token char_literal18 = null;
        Token ASC19 = null;

        Object i1_tree = null;
        Object d1_tree = null;
        Object i2_tree = null;
        Object d2_tree = null;
        Object ORDER15_tree = null;
        Object BY16_tree = null;
        Object ASC17_tree = null;
        Object char_literal18_tree = null;
        Object ASC19_tree = null;

        try {
            // GQL.g:67:35: ( ORDER BY i1= IDENTITY ( ASC |d1= DESC )? ( ',' i2= IDENTITY ( ASC |d2= DESC )? )* )
            // GQL.g:68:3: ORDER BY i1= IDENTITY ( ASC |d1= DESC )? ( ',' i2= IDENTITY ( ASC |d2= DESC )? )*
            {
                root_0 = (Object) adaptor.nil();

                retval.r = new OrderBy();

                ORDER15 = (Token) match(input, ORDER, FOLLOW_ORDER_in_orderby_clause263);
                ORDER15_tree =
                        (Object) adaptor.create(ORDER15)
                ;
                adaptor.addChild(root_0, ORDER15_tree);

                BY16 = (Token) match(input, BY, FOLLOW_BY_in_orderby_clause265);
                BY16_tree =
                        (Object) adaptor.create(BY16)
                ;
                adaptor.addChild(root_0, BY16_tree);

                i1 = (Token) match(input, IDENTITY, FOLLOW_IDENTITY_in_orderby_clause269);
                i1_tree =
                        (Object) adaptor.create(i1)
                ;
                adaptor.addChild(root_0, i1_tree);

                OrderByItem it = new OrderByItem((i1 != null ? i1.getText() : null));

                // GQL.g:69:71: ( ASC |d1= DESC )?
                int alt11 = 3;
                int LA11_0 = input.LA(1);

                if ((LA11_0 == ASC)) {
                    alt11 = 1;
                } else if ((LA11_0 == DESC)) {
                    alt11 = 2;
                }
                switch (alt11) {
                    case 1:
                        // GQL.g:69:72: ASC
                    {
                        ASC17 = (Token) match(input, ASC, FOLLOW_ASC_in_orderby_clause275);
                        ASC17_tree =
                                (Object) adaptor.create(ASC17)
                        ;
                        adaptor.addChild(root_0, ASC17_tree);
                    }
                    break;
                    case 2:
                        // GQL.g:69:78: d1= DESC
                    {
                        d1 = (Token) match(input, DESC, FOLLOW_DESC_in_orderby_clause281);
                        d1_tree =
                                (Object) adaptor.create(d1)
                        ;
                        adaptor.addChild(root_0, d1_tree);

                        it.setDirection(false);
                    }
                    break;
                }

                retval.r.withItem(it);

                // GQL.g:70:3: ( ',' i2= IDENTITY ( ASC |d2= DESC )? )*
                loop13:
                do {
                    int alt13 = 2;
                    int LA13_0 = input.LA(1);

                    if ((LA13_0 == 59)) {
                        alt13 = 1;
                    }
